      small hint window to raise.  This feature is also known as
      `toolbar tips' or `button help'.  (optional)
    - Value tips.  Moving the mouse pointer over a variable causes a
      small window to raise showing the current variable value.  (optional)
    - The info shown in the tips is also displayed in the status line.
    - The status line has moved to the bottom.  (can be restored)
    - The register window can display floating-point registers.
    - The `Preferences' panel has been extended and reworked:
      + Button tips and Value tips can be enabled and disabled.
      + Tab width and graph grid size can now be changed at run time.
      + You can choose at run time whether command buttons should 
        be placed in the command tool (as in DDD 2.0) or in the 
        source window (as in DDD 1.x).
      + You can reset the DDD preferences to the least recently saved
	settings.
    - Some items have been renamed for clarity:
      + The `Stack' menu is now named `Status', as it now hosts other
        status-related items besides backtrace and registers.
      + The `Break' button is now named `Interrupt' (as in DDD 1.x), to
        avoid confusion with the `Break At' button. 
      + The `Quit' menu item is now named `Abort', to avoid confusion
        with the `Exit' menu item (which issues a `quit' command).
    - DBX settings can now be viewed and changed at run time, using
      the `Settings' panel.
    - If you are using GDB, there is a panel for displaying various
      things about the program being debugged.
    - Reading the VSL library is now realized as a background job,
      reducing startup time drastically.
    - In the data window, the middle mouse button now toggles 
      the display selection instead of simply extending it.
    - Ever suffered from a frozen display while debugging a modal
      application?  DDD will now automatically make the debugged
      program ungrab the pointer, if it is interrupted in some modal